Fixed problem with jumping clock

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -21,7 +21,7 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     float: left;
     font-size: 65px;
-    width: 600px;
+    width: 555px;
     text-align: left;
 }
 
